[gd_scene load_steps=2 format=3 uid="uid://b5k33d222kp2n"]

[ext_resource type="Script" path="res://menu/debug_menu/server_debug_sub_menu.gd" id="1_6gbdj"]

[node name="ServerDebugSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gbdj")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 78.0
offset_top = 42.0
offset_right = -90.0
offset_bottom = -74.0

[node name="Launch" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Server"

[node name="LaunchLAN" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Launch Server with LAN"

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Launch" to="." method="_on_launch_pressed"]
[connection signal="pressed" from="VBoxContainer/LaunchLAN" to="." method="_on_launch_lan_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
